# DiscordBot

./: .gitignore  discordBot.sln  extern.rar
Project1/: Botclient.cpp  Botclient.h  CMakeLists.txt  MessageHistory.cpp  MessageHistory.h  MessageParser.cpp  MessageParser.h  Project1.vcxproj  Project1.vcxproj.filters  ResetTimer.cpp  ResetTimer.h  UserDatabase.cpp  UserDatabase.h  main.cpp
